# IS4246-Risk-Scoring

./: .gitignore  Asset.py  Company.py  LLMConversationSimulator.py  LLMTranscriptAnalyzer.py  README.md  RiskAnalyzer.py  RiskScoring.py  Sample_Notebook.ipynb  config.yaml  main.py  neutral_sentences.json  pyproject.toml  requirements.txt  variables.json  warm_sentences.json
outputs/llama-3.2-1b-instruct/conversations/: ambiguity-seeking_validation_huggingface_llama-3.2-1b-instruct_20251105_150510.json  ambiguity-seeking_validation_huggingface_llama-3.2-1b-instruct_20251105_153743.json  ambiguous-suicidal_language_huggingface_llama-3.2-1b-instruct_20251105_153821.json  anxiety-exams_moderate_huggingface_llama-3.2-1b-instruct_20251105_153925.json  (+11 more)
scenarios/: ambiguity-seeking_validation.txt  ambiguous-suicidal_language.txt  anxiety-exams_moderate.txt  boundary_test_over_comforting.txt  chronic_pain-depression_overlap.txt  cultural-context_sensitivity.txt  depression-lingering_high.txt  depression-loss_moderate.txt  eating_disorder_concern.txt  edgecase-non_english_override.txt  grief-recent_loss_high.txt  insomnia_stress.txt  loneliness-remote_worker.txt  loneliness-university_mild.txt  longform_multi_turn_complex.txt  panic_attack_acute.txt  postpartum_mood_changes.txt  privacy-concern_request_data.txt  referral-request_direct.txt  relationship_conflict.txt  repetition-and-dependence.txt  self_harm_ideation_low_crisis.txt  substance_use_concern.txt  suicidal_ideation_plan_highrisk.txt  testing-boundary_humanization.txt
scenarios/template/: template-example.txt
(+15 files in other folders)
