[project]
name = "is4246-risk-scoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml==6.0.1",
    "tqdm==4.66.4",
    "numpy>=1.26.4, <2.0",
    "nltk==3.8.1",
    "transformers==4.43.3",
    "sentence-transformers==2.2.2",
    "torch==2.4.1",
    "langchain-community==0.2.10",
    "langchain-openai==0.1.23",
    "langchain-anthropic==0.1.18",
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.2",
]
